--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <span class="header_element">
         <div class="menu" id="menu">
           <select name="noK" id="noK">
-            <option selected disabled><h3>K Value</h3></option>
+            <option><h3>K Value</h3></option>
             <option value="1">K = 1</option>
             <option value="2">K = 2</option>
             <option value="3">K = 3</option>
