--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>TEST DRAG AND DROP</title>
+    <title>Color Clustering K-Means JS</title>
     <script src="p5.min.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="html2canvas.min.js"></script>
